# transcribe_align_textgrid

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish_on_push.yml  test_on_push.yml
src/transcribe_align_textgrid/: __init__.py  __main__.py  adapter.py  cli.py  whisper_schema.py
src/transcribe_allign_textgrid/: __init__.py  __main__.py  adapter.py  cli.py
tests/: helpers.py  test_adapter.py  test_schema.py
tests/expected/: apollo11.words.TextGrid  arabic.words.TextGrid  bonjour_vous_allez_bien.words.TextGrid  empty.words.TextGrid  gaenswein15.words.TextGrid  gloria.words.TextGrid  laugh.words.TextGrid  punctuations.words.TextGrid  random_music.words.TextGrid
