[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe_allign_textgrid"
version = "0.1.3"
authors = [
  { name="JJWRoeloffs", email="jelleroeloffs@gmail.com" },
]
description = "Create for-alligned transcription TextGrids from Audio"
keywords = ["praat", "whisper", "force-allign", "TextGrid"]
readme = "README.md"
requires-python = ">=3.7, <3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/JJWRoeloffs/transcribe_allign_textgrid"
"Bug Tracker" = "https://github.com/JJWRoeloffs/transcribe_allign_textgrid/issues"
