[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe_align_textgrid"
version = "0.2.3"
authors = [{ name = "JJWRoeloffs", email = "jelleroeloffs@gmail.com" }]
description = "Create for-aligned transcription TextGrids from Audio"
keywords = ["praat", "whisper", "force-align", "TextGrid"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]

[project.urls]
"Homepage" = "https://github.com/JJWRoeloffs/transcribe_align_textgrid"
"Bug Tracker" = "https://github.com/JJWRoeloffs/transcribe_align_textgrid/issues"
