[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe_align_textgrid"
version = "0.2.4"
authors = [{ name = "JJWRoeloffs", email = "jelleroeloffs@gmail.com" }]
description = "Create for-aligned transcription TextGrids from Audio"
keywords = ["praat", "whisper", "force-align", "TextGrid"]
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]

[project.urls]
"Homepage" = "https://github.com/JJWRoeloffs/transcribe_align_textgrid"
"Bug Tracker" = "https://github.com/JJWRoeloffs/transcribe_align_textgrid/issues"
